# lastwar-bot

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
bot/: __init__.py  core.py  dry_run.py  metrics.py  tasks.py
logs/: metrics.jsonl
scripts/: 00_setup_server.sh  capture_template.sh  deploy.sh  health_check.sh  start_emulators.sh  stop_emulators.sh  validate_templates.py
tests/: test_config.py  test_metrics.py  test_tasks.py  test_templates.py
